css/style.css
/* ... */
/* Variables */
:root {

/* Color */
  --basic-black: #000000;
  --basic-dark: #333333;
  --basic-gray: #e6e6e6;
  --basic-light: #f2f2f2;
  --basic-white: #ffffff;

  /* status */
  --status-success: #7db550;
  --status-warning: #fd922e;
  --status-error: #ff5757;

  /* special */
  --special-cold-dark: #68a2ca;
  --special-cold-light: #83b3d3;
  --special-cold-light-12: rgba(131, 179, 211, 0.12);
  --special-cold-light-20: rgba(131, 179, 211, 0.2);
  --special-neutral-dark: #6c9e42;
  --special-neutral-light: #7db54f;
  --special-warm-dark: #615048;
  --special-warm-light: #756257;

/* Value */
  --container-padding: 59px;
}

/* Basic styles */
html { height: 100%; }

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0;
  min-height: 100%;

  font-family: "PT Sans", Arial, sans-serif;
  font-size: 16px;
  line-height: 21px;
  color: var(--basic-black);
}

.button {
  font: inherit;
  font-weight: bold;
  text-decoration: none;
  text-transform: uppercase;
  text-align: center;
  color: var(--basic-white);

  border: none;
  border-radius: 4px;

  cursor: pointer;
}

.button:focus { outline: 3px solid var(--special-cold-light); }

.container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 1200px;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* Header */

.page-header {
  position: relative;

  display: flex;
  margin-bottom: -5px;
  padding-right: var(--container-padding);
  padding-left: var(--container-padding);
}

/* Nav */
.page-header__nav {
  margin-right: 140px;
  padding-top: 12px;
  padding-bottom: 20px;
  width: 332px;
}

.page-nav__list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;

  list-style: none;
}

.page-nav__item { position: relative; }

.page-nav__link {
  display: inline-block;
  padding: 6px 12px;

  font-weight: bold;
  font-size: 20px;
  line-height: 26px;
  text-decoration: none;
  color: inherit;

  outline: none;
}

.page-nav__link:hover:not(.page-nav__link--current) { color: var(--special-warm-light); }

.page-nav__link:focus {
  color: var(--special-warm-light);

  border-radius: 6px;

  outline: 3px solid var(--special-cold-light);
}

.page-nav__link:active:not(.page-nav__link--current) {
  outline: none;
  opacity: 0.3;
}

.page-nav__link--current::before {
  content: "";
  position: absolute;
  bottom: -16px;

  width: 70px;
  height: 2px;

  background-color: var(--special-warm-light);
}

.page-logo { text-decoration: none; }

.page-logo__img { display: block; }

.page-header__menu {
  display: flex;
  align-items: flex-start;
  margin-left: auto;
  padding-top: 14px;
  width: 273px;
}

.user-menu__link {
  position: relative;
  display: inline-block;

  padding: 6px 10px;

  text-decoration: none;
}

.user-menu__svg {
  fill: var(--basic-black);
  vertical-align: middle;
}

.user-menu__link:hover .user-menu__svg { fill: var(--special-warm-light); }

.user-menu__link:focus .user-menu__svg { fill: var(--special-warm-light); }

.user-menu__link:focus {
  border-radius: 6px;

  outline: 3px solid var(--special-cold-light);
}

.user-menu__link:active .user-menu__svg { opacity: 0.3; }

.user-menu__link:active { outline: none; }

.user-menu__link:active .menu-link__content { color: rgba(255, 255, 255, 0.3); }

.user-menu__link--btn {
  margin-left: 24px;
  padding-top: 8px;
  padding-bottom: 8px;
  width: 140px;

  background-color: var(--special-warm-light);
}

.user-menu__link--btn:hover,
.user-menu__link--btn:focus {
  border-radius: 4px;
  background-color: var(--special-warm-dark);
}

.user-menu__link--btn:active { color: rgba(255, 255, 255, 0.3); }

.menu-link__content {
  position: absolute;
  top: 0;
  right: -4px;

  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 19px;
  min-height: 19px;

  font-size: 10px;
  line-height: 13px;
  color: var(--basic-white);

  background-color: var(--status-success);
  border-radius: 50%;
}

/* Main */
.page-main,
.inner-main { flex-grow: 1; }


/* Welcome */
.welcome {
  margin-bottom: 61px;
  padding-top: 51px;
  padding-bottom: 82px;

  background: var(--special-cold-dark);
  background-image: url("../img/jpg/sedona.jpg");
  background-repeat: no-repeat;
}

.welcome__pic {
  display: flex;
  margin: auto;
}

/* Promo */
.promo {
  margin: 0 auto 79px;
  width: 720px;
}

.promo__desc {
  margin-top: 0;
  margin-bottom: 34px;

  font-weight: bold;
  font-size: 30px;
  line-height: 36px;
  text-align: center;
  text-transform: uppercase;
}

.promo__sub-desc {
  font-size: 22px;
  line-height: 36px;
  text-align: center;
  color: var(--basic-dark);
}

.filter-wrapper {
  margin-bottom: 45px;
  padding-top: 40px;
  padding-right: var(--container-padding);
  padding-left: var(--container-padding);

  background-color: var(--special-cold-light);
  background-image: url("../img/catalog/jpg/catalog-bg.jpg");
  background-repeat: no-repeat;
}

.inner-main__title {
  margin-top: 0;
  margin-bottom: 0;

  font-size: 60px;
  line-height: 78px;
  color: var(--basic-white);
}

/* Section About */
.about { margin-bottom: 90px; }

.about__list {
  display: flex;
  flex-wrap: wrap;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;

  list-style: none;
}

.about__item,
.service__item {
  width: 400px;

  font-size: 18px;
  line-height: 21px;
  text-align: center;

  box-sizing: border-box;
}

.about__item:nth-child(n + 3) {
  padding-top: 10px;
  padding-bottom: 10px;
}

.about__item:nth-child(odd) { background-color: var(--special-cold-light-12); }

.about__item:nth-child(4) { background-color: var(--special-cold-light-20); }

.about__item--pic {
  width: auto;
  display: flex;
  flex-wrap: wrap;
}
/* ... */

